--- a/minesweeper/mine.html
+++ b/minesweeper/mine.html
@@ -6,11 +6,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Minesweeper</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.9.0/p5.js"></script>
-   
-    <!-- <audio id="om" src="./om.m4a"></audio> -->
+    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
     <h1>Minesweeper</h1>
     <div> <script src="mine.js"></script></div>
+    
+    <label class="switch">
+        <input type="checkbox">
+        <span class="slider"></span>
+      </label>
 </body>
 </html>
