Toggle switch to mark mines done

--- a/minesweeper/mine.html
+++ b/minesweeper/mine.html
@@ -14,7 +14,7 @@
     <div> <script src="mine.js"></script></div>
     
     <label class="switch">
-        <input type="checkbox">
+        <input id="marking" type="checkbox">
         <span class="slider"></span>
       </label>
 </body>
